on_delete_event

--- a/debian-src/usr/share/applications/hotspot-monitor.desktop
+++ b/debian-src/usr/share/applications/hotspot-monitor.desktop
@@ -3,6 +3,6 @@ Type=Application
 Name=Hotspot Monitor
 Comment=View hotspot data usage and speed
 Exec=hotspot-gui
-Icon=Icon=network-wireless
+Icon=Icon=image
 Terminal=false
 Categories=Network;Utility;
